clang/test/BSC/Negative/Coroutine/AwaitExpr/await-expr-of-func-params/await-expr-of-func-params.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s

#include "../../async-func-read-opposite.hbs"

int t() {
    return 42;
}

int test(int a, int b) {
    return 42;
}

_Async int f(int start) {
  t();
  test(_Await read(2), _Await read(2)); // #1
  test(2,3);
  test(t(), _Await read(2)); // #2

  int result = _Await read(1);
  return result;
}

// expected-error@#1 {{_Await expression is not allowed to appear in function parameters}}
// expected-error@#2 {{_Await expression is not allowed to appear in function parameters}}

int main() {
  return 0;
}
